syntax = "proto3";

option go_package = "server/pb/";

package authz_client;

service Authz {
  rpc PGAgreement (PGRequest) returns (PGResponse) {}
  rpc DiffieHellman (DiffieHellmanRequest) returns (DiffieHellmanResponse) {}
}

message PGRequest {
  string nonce = 1;
  int32 message_id = 2;
}

message PGResponse {
  string nonce = 1;
  string server_nonce = 2;
  int32 message_id = 3;
  int32 p = 4;
  int32 g = 5;
}

message DiffieHellmanRequest {
  string nonce = 1;
  string server_nonce = 2;
  int32 message_id = 3;
  int32 g_a = 4;
}

message DiffieHellmanResponse {
  string nonce = 1;
  string server_nonce = 2;
  int32 message_id = 3;
  int32 g_b = 4;
}